# stocks

./: .gitignore  analyze_simfin_coverage.py  backtest-results-take 2-100cash sitting 1 year multi.xlsx  backtest-results-v2.xlsx  evaluation for backtest.md  finviz-finance.ipynb  finviz-multifactor.ipynb  fix-convo-backtesting--claude doe .md  investment-strategy-analysis.md  pyproject.toml  run_backtest.py  s&p500-constituents.xlsx  short-term-trading-analysis.md  stock-data.csv  test_data_sources.py  trading-skill-development-roadmap.md
data/: comparison-feb-nov-2021.xlsx  multifactor-stock-data.xlsx  stock-data.xlsx
docs/: alternative-investing-strategies.md  backtest-analysis.md
notebooks/: backtest-comparison.ipynb  constants.ipynb  finviz-finance-docs.ipynb
output/: backtest-results-2026-01-22.xlsx  backtest-results-v1.xlsx  backtest-results-v2-analyzed.xlsx  backtest-results-v2.1.xlsx
scripts/: check_historical_eps.py  check_yfinance_data.py  check_yfinance_historical.py  explore_simfin.py
src/backtest/: run_backtest_v2.py
src/data_collection/: auto_finviz_finance.py
