[project]
name = "stocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "finvizfinance>=1.3.0",
    "notebook>=7.5.2",
    "openpyxl>=3.1.5",
    "yfinance>=0.2.50",
    "quantstats>=0.0.65",
    "matplotlib>=3.8.0",
    "simfin>=1.0.1",
]
